--- a/src/components/RockPaperScissors/RockPaperScissors.module.scss
+++ b/src/components/RockPaperScissors/RockPaperScissors.module.scss
@@ -69,7 +69,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 .spock{
     display: inline-block;
     position: relative;
-    top: -10px;
+    top: -15px;
     width: 96px;
     height: 97px;
     background-color: transparent;
@@ -86,7 +86,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 .paper{
     display: inline-block;
     position: relative;
-    top: -10px;
+    top: -15px;
     width: 96px;
     height: 97px;
     background-color: transparent;
@@ -106,10 +106,14 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 margin-right: 80px;
 }
 }
+
+.wrapper{
+    display: flex;
+    padding-left: 43px;
+    gap: 33px;
+}
 .lizard{
     display: inline-block;
-    position: relative;
-    left: 33px;
     width: 96px;
     height: 97px;
     background-color: transparent;
@@ -124,8 +128,7 @@ margin-right: 80px;
 
 
 .rock{
-    position: relative;
-    left: 100px;
+
     width: 96px;
     height: 97px;
     background-color: transparent;
