--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -14,16 +14,18 @@ padding: 12px 12px 12px 23px;
 }
 }
 .title{
+width: 49px;
+height: 48px;
+text-decoration: none;
 color: #FFF;
 margin: 0;
 text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.20);
 font-family: Barlow Semi Condensed;
-font-size: 21px;
+font-size: 12px;
 font-weight: 700;
-line-height: 16px;
+line-height: 10px;
 text-transform: uppercase;
 
-width: 83px;
 
 @media only screen and (min-width: 768px) {
     font-size: 40px;
