--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -10,6 +10,7 @@
         padding-top: 48px;
         padding-bottom: 32px;
         padding-right: 32px;
+        padding-left: 32px;
     }
   
 }
