--- a/src/components/GameStarted/GameStarted.module.scss
+++ b/src/components/GameStarted/GameStarted.module.scss
@@ -39,7 +39,8 @@ background-image: url(../../images/icon-paper-win.svg);
 @media only screen and (min-width: 768px) {
     width: 292.611px;
     height: 286.699px;
-    background-image: url("data:image/svg+xml,%3Csvg width='293' height='300' viewBox='0 0 293 300' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg filter='url(%23filter0_d_0_1577)'%3E%3Cellipse cx='146.305' cy='150' rx='146.305' ry='150' fill='%232A45C2'/%3E%3C/g%3E%3Cellipse cx='146.305' cy='143.35' rx='146.305' ry='143.35' fill='%234664F4'/%3E%3Cellipse cx='146.305' cy='143.35' rx='146.305' ry='143.35' fill='url(%23paint0_linear_0_1577)'/%3E%3Ccircle cx='146.305' cy='146.306' r='112.315' fill='%23BABFD4'/%3E%3Cellipse cx='146.305' cy='152.217' rx='112.315' ry='106.404' fill='url(%23paint1_linear_0_1577)'/%3E%3Cpath d='M189.944 117.226C189.116 116.908 188.255 116.771 187.459 116.826C186.31 116.907 185.382 117.376 184.832 118.143C181.593 122.7 178.941 131.305 176.802 138.22C175.82 141.418 174.502 145.697 173.548 147.728C172.553 142.038 173.677 121.194 174.113 113.167L174.12 113.037C174.423 107.46 174.463 106.482 174.397 106.053C173.917 102.993 172.696 100.985 170.768 100.087C168.819 99.175 166.287 99.5783 163.56 101.227C162.192 102.057 161.814 104.908 160.641 117.83L160.636 117.886C159.99 124.985 158.503 141.331 156.672 144.053C154.607 140.245 151.766 118.606 150.539 109.239C149.681 102.679 149.181 98.913 148.845 97.7756C148.138 95.3924 145.151 93.3645 142.194 93.2521C139.733 93.1295 137.713 94.3871 136.749 96.5722C134.946 98.5879 135.583 105.272 137.576 121.104C138.525 128.638 140.483 144.202 139.251 145.947C136.793 145.679 132.574 135.93 126.71 116.964C125.065 111.652 124.555 110.055 124.05 109.355C123.054 106.919 119.668 105.041 116.633 105.253C116.373 105.271 116.121 105.305 115.872 105.353C114.283 105.67 110.657 107.139 111.43 113.918C113.572 123.317 115.897 130.219 118.154 136.917L118.2 137.051C119.55 141.063 120.827 144.854 122.013 149.061C124.81 158.994 123.722 165.157 123.709 165.226C123.616 165.86 123.421 166.248 123.128 166.383C123.022 166.433 122.887 166.462 122.734 166.473C121.848 166.535 120.519 165.946 119.834 165.562C118.27 162.558 110.479 148.242 103.42 146.257L103.166 146.181L102.91 146.205C100.321 146.451 98.4169 147.434 97.2534 149.126C95.4097 151.803 96.1729 155.212 96.358 155.896L96.4621 156.141C96.5197 156.244 102.181 166.61 103.057 171.432C103.812 175.566 107.721 180.047 110.864 183.647L110.993 183.794C112.019 184.972 112.903 185.99 113.601 186.932C122.72 196.486 137.141 204.521 137.259 204.586C139.058 205.92 140.058 207.208 140.164 208.318C140.231 209.044 139.856 209.478 139.842 209.493L139.528 209.822L141.522 211.768L179.568 209.083L181.19 201.617C186.206 180.531 185.159 162.552 185.143 162.432C185.161 161.771 186.567 155.374 187.697 150.205L187.731 150.074C189.984 139.777 192.787 126.966 193.325 122.093C193.558 120.01 192.231 118.096 189.944 117.226Z' fill='%233B4262'/%3E%3Cdefs%3E%3Cfilter id='filter0_d_0_1577' x='-3' y='0' width='298.611' height='306' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'%3E%3CfeFlood flood-opacity='0' result='BackgroundImageFix'/%3E%3CfeColorMatrix in='SourceAlpha' type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0' result='hardAlpha'/%3E%3CfeOffset dy='3'/%3E%3CfeGaussianBlur stdDeviation='1.5'/%3E%3CfeColorMatrix type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.196706 0'/%3E%3CfeBlend mode='normal' in2='BackgroundImageFix' result='effect1_dropShadow_0_1577'/%3E%3CfeBlend mode='normal' in='SourceGraphic' in2='effect1_dropShadow_0_1577' result='shape'/%3E%3C/filter%3E%3ClinearGradient id='paint0_linear_0_1577' x1='0' y1='0' x2='0' y2='286.699' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='white' stop-opacity='0.0966455'/%3E%3Cstop offset='1' stop-color='white' stop-opacity='0.01'/%3E%3C/linearGradient%3E%3ClinearGradient id='paint1_linear_0_1577' x1='256.759' y1='258.621' x2='256.759' y2='49.3403' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='%23F3F3F3'/%3E%3Cstop offset='1' stop-color='%23DADADA'/%3E%3C/linearGradient%3E%3C/defs%3E%3C/svg%3E%0A");
+    background-image: url(../../images/icon-paper-win.svg);
+     background-size: cover;
 }
 }
 
@@ -56,7 +57,8 @@ background-image: url(../../images/icon-paper-win.svg);
     @media only screen and (min-width: 768px) {
         width: 292.611px;
         height: 286.699px;
-        background-image: url("data:image/svg+xml,%3Csvg width='301' height='308' viewBox='0 0 301 308' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg filter='url(%23filter0_d_0_1676)'%3E%3Cg filter='url(%23filter1_d_0_1676)'%3E%3Cellipse cx='150.305' cy='152' rx='146.305' ry='150' fill='%23C76C1B'/%3E%3C/g%3E%3Cellipse cx='150.305' cy='145.35' rx='146.305' ry='143.35' fill='%23EB9F0E'/%3E%3Cellipse cx='150.305' cy='145.35' rx='146.305' ry='143.35' fill='url(%23paint0_linear_0_1676)'/%3E%3Ccircle cx='150.305' cy='148.305' r='112.315' fill='%23BABFD4'/%3E%3Cellipse cx='150.305' cy='154.217' rx='112.315' ry='106.404' fill='url(%23paint1_linear_0_1676)'/%3E%3Cpath d='M120.985 147.344L133.117 130.285C128.074 129.445 118.814 129.258 111.229 136.844C99.2723 148.8 94.43 174.63 93.4205 180.882L123.809 211.271C129.279 210.802 153.5 207.568 176.838 184.23C177.086 183.726 182.771 179.525 178.123 174.877C175.904 172.659 172.232 172.7 169.966 174.967C168.812 176.121 167.017 176.138 165.887 175.008C164.757 173.878 164.774 172.083 165.928 170.929L174.175 162.682C178.366 158.491 174.415 151.421 168.566 153.12L161.814 158.9C160.581 159.974 158.749 159.788 157.735 158.617C156.688 157.404 156.912 155.568 158.104 154.535C181.688 133.843 178.245 136.335 193.418 122.113C199.087 117.393 191.956 109.044 186.369 113.824L149.663 146.832C148.596 147.741 146.959 147.758 145.908 146.79C144.696 145.743 144.668 144.234 145.46 143.042L171.064 103.239C174.806 98.171 167.44 92.5421 163.499 97.6515L125.643 150.596C124.73 151.916 122.89 152.219 121.636 151.295C120.379 150.451 120.034 148.619 120.985 147.344Z' fill='%233B4262'/%3E%3C/g%3E%3Cdefs%3E%3Cfilter id='filter0_d_0_1676' x='0' y='0' width='300.611' height='308' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'%3E%3CfeFlood flood-opacity='0' result='BackgroundImageFix'/%3E%3CfeColorMatrix in='SourceAlpha' type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0' result='hardAlpha'/%3E%3CfeOffset dy='2'/%3E%3CfeGaussianBlur stdDeviation='2'/%3E%3CfeColorMatrix type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.5 0'/%3E%3CfeBlend mode='normal' in2='BackgroundImageFix' result='effect1_dropShadow_0_1676'/%3E%3CfeBlend mode='normal' in='SourceGraphic' in2='effect1_dropShadow_0_1676' result='shape'/%3E%3C/filter%3E%3Cfilter id='filter1_d_0_1676' x='1' y='2' width='298.611' height='306' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'%3E%3CfeFlood flood-opacity='0' result='BackgroundImageFix'/%3E%3CfeColorMatrix in='SourceAlpha' type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0' result='hardAlpha'/%3E%3CfeOffset dy='3'/%3E%3CfeGaussianBlur stdDeviation='1.5'/%3E%3CfeColorMatrix type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.196706 0'/%3E%3CfeBlend mode='normal' in2='BackgroundImageFix' result='effect1_dropShadow_0_1676'/%3E%3CfeBlend mode='normal' in='SourceGraphic' in2='effect1_dropShadow_0_1676' result='shape'/%3E%3C/filter%3E%3ClinearGradient id='paint0_linear_0_1676' x1='4' y1='2' x2='4' y2='288.699' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='white' stop-opacity='0.0966455'/%3E%3Cstop offset='1' stop-color='white' stop-opacity='0.01'/%3E%3C/linearGradient%3E%3ClinearGradient id='paint1_linear_0_1676' x1='260.759' y1='260.621' x2='260.759' y2='51.3401' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='%23F3F3F3'/%3E%3Cstop offset='1' stop-color='%23DADADA'/%3E%3C/linearGradient%3E%3C/defs%3E%3C/svg%3E%0A");
+        background-image: url(../../images/icon-scissors-win.svg);
+        background-size: cover;
     }
 }
 
@@ -75,7 +77,8 @@ background-image: url(../../images/icon-paper-win.svg);
     @media only screen and (min-width: 768px) {
         width: 292.611px;
         height: 286.699px;
-        background-image: url("data:image/svg+xml,%3Csvg width='293' height='300' viewBox='0 0 293 300' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg filter='url(%23filter0_d_0_1590)'%3E%3Cellipse cx='146.305' cy='150' rx='146.305' ry='150' fill='%239D1634'/%3E%3C/g%3E%3Cellipse cx='146.305' cy='143.35' rx='146.305' ry='143.35' fill='%23DB2E4D'/%3E%3Cellipse cx='146.305' cy='143.35' rx='146.305' ry='143.35' fill='url(%23paint0_linear_0_1590)'/%3E%3Ccircle cx='146.306' cy='146.306' r='112.315' fill='%23BABFD4'/%3E%3Cellipse cx='146.306' cy='152.217' rx='112.315' ry='106.404' fill='url(%23paint1_linear_0_1590)'/%3E%3Cpath d='M189.814 130.175C188.519 113.766 170.171 115.441 170.171 115.441C162.427 101.729 150.329 111.661 150.329 111.661C141.035 98.222 129.381 110.675 129.381 110.675C109.289 108.499 110.068 124.999 110.068 124.999C109.595 130.244 112.9 146.472 112.9 146.472C109.919 137.119 103.453 144.883 103.453 144.883C95.5052 157.202 101.488 163.946 101.488 163.946C112.243 176.608 135.164 191.803 135.164 191.803C143.463 196.579 139.953 200.837 139.953 200.837L190.152 192.506L191.306 182.944C198.937 159.761 189.814 130.175 189.814 130.175Z' fill='%233B4262'/%3E%3Cdefs%3E%3Cfilter id='filter0_d_0_1590' x='-3' y='0' width='298.611' height='306' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'%3E%3CfeFlood flood-opacity='0' result='BackgroundImageFix'/%3E%3CfeColorMatrix in='SourceAlpha' type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0' result='hardAlpha'/%3E%3CfeOffset dy='3'/%3E%3CfeGaussianBlur stdDeviation='1.5'/%3E%3CfeColorMatrix type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.196706 0'/%3E%3CfeBlend mode='normal' in2='BackgroundImageFix' result='effect1_dropShadow_0_1590'/%3E%3CfeBlend mode='normal' in='SourceGraphic' in2='effect1_dropShadow_0_1590' result='shape'/%3E%3C/filter%3E%3ClinearGradient id='paint0_linear_0_1590' x1='0' y1='0' x2='0' y2='286.699' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='white' stop-opacity='0.0966455'/%3E%3Cstop offset='1' stop-color='white' stop-opacity='0.01'/%3E%3C/linearGradient%3E%3ClinearGradient id='paint1_linear_0_1590' x1='256.759' y1='258.621' x2='256.759' y2='49.3403' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='%23F3F3F3'/%3E%3Cstop offset='1' stop-color='%23DADADA'/%3E%3C/linearGradient%3E%3C/defs%3E%3C/svg%3E%0A");
+        background-image: url(../../images/icon-rock-win.svg);
+        background-size: cover;
     }
 
 }
@@ -91,6 +94,13 @@ background-image: url(../../images/icon-paper-win.svg);
     padding: 0;
 
     background-image: url(../../images/icon-lizard-win.svg);
+
+    @media only screen and (min-width: 768px) {
+        width: 293.919px;
+        height: 286.699px;
+        background-image: url(../../images/icon-lizard-win.svg);
+        background-size: cover;
+    }
 }
 .spock{
     display: block;
@@ -102,6 +112,13 @@ background-image: url(../../images/icon-paper-win.svg);
     padding: 0;
 
     background-image: url(../../images/icon-spock-win.svg);
+
+    @media only screen and (min-width: 768px) {
+        width: 293.919px;
+        height: 286.699px;
+       background-image: url(../../images/icon-rock-win.svg);
+       background-size: cover;
+    }
 }
 .status{
     width: 288px;
