adding styles for game for 1440px

--- a/src/components/GameStarted/GameStarted.module.scss
+++ b/src/components/GameStarted/GameStarted.module.scss
@@ -116,7 +116,7 @@ background-image: url(../../images/icon-paper-win.svg);
     @media only screen and (min-width: 768px) {
         width: 293.919px;
         height: 286.699px;
-       background-image: url(../../images/icon-rock-win.svg);
+       background-image: url(../../images/icon-spock-win.svg);
        background-size: cover;
     }
 }
